{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 118,
  "lineage": "a7f2bc8f-0884-24c0-39d6-5aec294257ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:571062159788:internet-gateway/igw-03b78f6f924d27a2b",
            "id": "igw-03b78f6f924d27a2b",
            "owner_id": "571062159788",
            "region": "sa-east-1",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-0c7e3ace158ef07bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fullcycle"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:571062159788:route-table/rtb-03c85f255ee4e5bc6",
            "id": "rtb-03c85f255ee4e5bc6",
            "owner_id": "571062159788",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b78f6f924d27a2b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-route-table"
            },
            "tags_all": {
              "Name": "fullcycle-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7e3ace158ef07bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "571062159788",
            "id": "rtb-03c85f255ee4e5bc6",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-fullcycle"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7d0500080b5ea4d",
            "region": "sa-east-1",
            "route_table_id": "rtb-03c85f255ee4e5bc6",
            "subnet_id": "subnet-0520343b58a1afeff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table",
            "aws_subnet.subnets",
            "aws_vpc.vpc-fullcycle",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b5526dd2ffcf010",
            "region": "sa-east-1",
            "route_table_id": "rtb-03c85f255ee4e5bc6",
            "subnet_id": "subnet-09715a6ef9f02c38a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table",
            "aws_subnet.subnets",
            "aws_vpc.vpc-fullcycle",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:571062159788:security-group/sg-06862ba1020d9e5da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06862ba1020d9e5da",
            "ingress": [],
            "name": "terraform-20251208003536360900000001",
            "name_prefix": "terraform-",
            "owner_id": "571062159788",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7e3ace158ef07bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "571062159788",
            "id": "sg-06862ba1020d9e5da",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc-fullcycle"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:571062159788:subnet/subnet-0520343b58a1afeff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0520343b58a1afeff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571062159788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-0c7e3ace158ef07bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "571062159788",
            "id": "subnet-0520343b58a1afeff",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc-fullcycle",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:571062159788:subnet/subnet-09715a6ef9f02c38a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09715a6ef9f02c38a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571062159788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-0c7e3ace158ef07bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "571062159788",
            "id": "subnet-09715a6ef9f02c38a",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc-fullcycle",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-fullcycle",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:571062159788:vpc/vpc-0c7e3ace158ef07bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ca0faaf529d6b1b",
            "default_route_table_id": "rtb-041e394ee99cf2c7d",
            "default_security_group_id": "sg-05c234b8818b1318d",
            "dhcp_options_id": "dopt-0ac549b22618be0c6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7e3ace158ef07bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041e394ee99cf2c7d",
            "owner_id": "571062159788",
            "region": "sa-east-1",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "571062159788",
            "id": "vpc-0c7e3ace158ef07bd",
            "region": "sa-east-1"
          }
        }
      ]
    }
  ]
}